tried a fix for the pie bg problem on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -615,3 +615,9 @@ nav#footer p{
 	background-image: url(../img/montmartreP.jpg);
     }
 }
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 1024px) {
+    #tf-home {
+        background-attachment: scroll;
+    }
+}
